<resources>
    <string name="app_name">Pill Droid</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="misc_created_by">created by garric</string>
    <string name="misc_contact_email" translatable="false">garric@okki.hu</string>
    <string name="title_medication_list">Medication List</string>
    <string name="add_new">Add New</string>
    <string name="title_med_details">Edit Medication</string>
    <string name="medication_name">medication name</string>
    <string name="add_dosage">Add dosage</string>
    <string name="title_edit_dose">Edit Dose</string>
    <string name="enter_dose">enter dose</string>
    <string name="every">every</string>
    <string name="select_number">select number</string>
    <string name="at">at</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="delete">Delete</string>
    <string name="please_confirm">Please confirm</string>
    <string name="will_be_deleted">will be deleted</string>
    <string name="cancel">Cancel</string>
    <string name="pill_reminder">Pill Reminder</string>
    <string name="notification_template">Take %s of %s</string>
    <string name="action_help">Help</string>
    <string name="app_url_help" translatable="false">https://github.com/garricasaurus/pill-droid</string>
    <string name="licence_p1" translatable="false">PillDroid - an app for Android to remind the user when and what medication to take Copyright (C) 2021  Richard Garai</string>
    <string name="licence_p2" translatable="false">"This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. "</string>
    <string name="licence_p3" translatable="false">"This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details. "</string>
    <string name="licence_p4" translatable="false">"You should have received a copy of the GNU General Public License along with this program.  If not, see https://www.gnu.org/licenses/. "</string>
    <string name="new_medication">New Medication</string>
    <string name="one_pill">1 pill</string>
</resources>