<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/medListFragment">

    <fragment
        android:id="@+id/aboutFragment"
        android:name="hu.okki.pilldroid.screens.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/medListFragment"
        android:name="hu.okki.pilldroid.screens.medlist.MedListFragment"
        android:label="@string/title_medication_list"
        tools:layout="@layout/fragment_med_list" >
        <action
            android:id="@+id/action_medListFragment_to_medDetails"
            app:destination="@id/medDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/medDetailsFragment"
        android:name="hu.okki.pilldroid.screens.meddetails.MedDetailsFragment"
        android:label="@string/title_med_details"
        tools:layout="@layout/fragment_med_details" >
        <argument android:name="medicationId" />
        <action
            android:id="@+id/action_medDetailsFragment_to_doseDetailsFragment"
            app:destination="@id/doseDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/doseDetailsFragment"
        android:name="hu.okki.pilldroid.screens.dosedetails.DoseDetailsFragment"
        android:label="@string/title_edit_dose" >
        <argument android:name="doseId" />
    </fragment>

</navigation>